--- a/module5/session_03_Angular_Overview/caculator/angular.json
+++ b/module5/session_03_Angular_Overview/caculator/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "pet": {
+    "caculator": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/pet",
+            "outputPath": "dist/caculator",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -24,13 +24,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "src/styles.css"
             ],
-            "scripts": [
-              "node_modules/jquery/dist/jquery.min.js",
-              "node_modules/bootstrap/dist/js/bootstrap.min.js"
-            ]
+            "scripts": []
           },
           "configurations": {
             "production": {
@@ -66,18 +62,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "pet:build"
+            "browserTarget": "caculator:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "pet:build:production"
+              "browserTarget": "caculator:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "pet:build"
+            "browserTarget": "caculator:build"
           }
         },
         "test": {
@@ -114,15 +110,15 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "pet:serve"
+            "devServerTarget": "caculator:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "pet:serve:production"
+              "devServerTarget": "caculator:serve:production"
             }
           }
         }
       }
     }},
-  "defaultProject": "pet"
+  "defaultProject": "caculator"
 }
