--- a/module5/session_03_Angular_Overview/caculator/package.json
+++ b/module5/session_03_Angular_Overview/caculator/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pet",
+  "name": "caculator",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -19,8 +19,6 @@
     "@angular/platform-browser": "~9.1.6",
     "@angular/platform-browser-dynamic": "~9.1.6",
     "@angular/router": "~9.1.6",
-    "bootstrap": "^4.6.0",
-    "jquery": "^3.5.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
